working over the management of languages

--- a/WebBellwether.Web/app/home/header.html
+++ b/WebBellwether.Web/app/home/header.html
@@ -50,7 +50,7 @@
                                 <a href="" style="color:#ffffff !important;" class="dropdown-toggle">{{translation.ManagementLanguages}}</a>
                                 <ul class="d-menu" data-role="dropdown">
                                     <li><a href="">{{translation.AddLanguage}}</a></li>
-                                    <li><a href="">{{translation.LanguagesEdition}}</a></li>
+                                    <li><a href="#/managementLanguages">{{translation.LanguagesEdition}}</a></li>
                                 </ul>
                             </li>
                             <li>
