--- a/WebBellwether.Web/index.html
+++ b/WebBellwether.Web/index.html
@@ -71,6 +71,7 @@
     <script src="app/googleTranslate/googleTranslationServise.js"></script>
     <script src="app/translations/translateService.js"></script>
     <script src="app/jokes/jokesService.js"></script>
+    <script src="app/languages/languagesService.js"></script>
 
     <!-- Load controllers -->
     <script src="app/home/indexController.js"></script>
@@ -92,6 +93,8 @@
     <script src="app/integrationGames/managementIntegrationGamesController.js"></script>
     <script src="app/jokes/managementJokeCategoriesController.js"></script>
     <script src="app/jokes/managementJokesController.js"></script>
+    <script src="app/languages/managementLanguagesController.js"></script>
+
     <!-- Load custom filters -->
     <script src="app/filters/customFilters.js"></script>
     <!-- Load custom directives -->
