pagination in management languages works , but i have several little problem to resorve

--- a/WebBellwether.Web/app/home/header.html
+++ b/WebBellwether.Web/app/home/header.html
@@ -1,7 +1,8 @@
 ﻿<header class="main-header">
     <h1>
         <a href="#/">
-            <img class='rotator animation' src="/appData/images/logo/BigBLogoLightR.png" style="width: 150px; height: 150px; margin-bottom: -20px; margin-top: -10px" />
+            <!--<img class='rotator animation' src="/appData/images/logo/BigBLogoLightR.png" style="width: 150px; height: 150px; margin-bottom: -20px; margin-top: -10px" />-->
+            <img src="/appData/images/logo/BigBLogoLightR.png" style="width: 150px; height: 150px; margin-bottom: -20px; margin-top: -10px" />
         </a>
     </h1>
     <div class="imageContainer" style="background-image: url(/appData/images/header/23nR.png)">
