new enimation slide-toggle for management languages list

--- a/WebBellwether.Web/index.html
+++ b/WebBellwether.Web/index.html
@@ -98,6 +98,8 @@
     <!-- Load custom filters -->
     <script src="app/filters/customFilters.js"></script>
     <!-- Load custom directives -->
+    <!-- Load custom animations --> 
+    <script src="app/animations/slide-toggle.js"></script>
 
     <script type="text/javascript">
         //scrollowany nav
