--- a/WebBellwether.Web/index.html
+++ b/WebBellwether.Web/index.html
@@ -55,7 +55,7 @@
     <script src="scripts/angular-animate.min.js"></script>
     <script src="scripts/metro.min.js"></script>
     <script src="scripts/css3-animate-it.js"></script>
-
+    <script src="scripts/angular-ui/ui-bootstrap-tpls.min.js"></script>
 
     <!-- Load app main script -->
     <script src="app/app.js?v=2"></script>
@@ -98,6 +98,7 @@
     <!-- Load custom filters -->
     <script src="app/filters/customFilters.js"></script>
     <!-- Load custom directives -->
+    <!--<script src="app/directives/ngAutocomplete.js"></script>-->
     <!-- Load custom animations --> 
     <script src="app/animations/slide-toggle.js"></script>
 
