--- a/WebBellwether.Web/app/home/header.html
+++ b/WebBellwether.Web/app/home/header.html
@@ -48,14 +48,10 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="" style="color:#ffffff !important;" class="dropdown-toggle">{{translation.ManagementLanguages}}</a>
-                                <ul class="d-menu" data-role="dropdown">
-                                    <li><a href="">{{translation.AddLanguage}}</a></li>
-                                    <li><a href="#/managementLanguages">{{translation.LanguagesEdition}}</a></li>
-                                </ul>
+                                <a href="#/managementLanguages">{{translation.ManagementLanguages}}</a>
                             </li>
                             <li>
-                                <a href="#/tokens" class="dropdown-toggle">{{translation.ManagementAccounts}}</a>
+                                <a href="#/tokens">{{translation.ManagementAccounts}}</a>
                             </li>
                         </ul>
                     </li>
