reforge in repositories (unit of work deleted) , publish languages work fine .

--- a/WebBellwether.Web/app/home/header.html
+++ b/WebBellwether.Web/app/home/header.html
@@ -48,6 +48,11 @@
                                 </ul>
                             </li>
                             <li>
+                                <!--<a href="" style="color:#ffffff !important;" class="dropdown-toggle">{{translation.ManagementLanguages}}</a>
+                                <ul class="d-menu" data-role="dropdown">
+                                    <li><a href="#/addLanguage">{{translation.AddLanguage}}</a></li>
+                                    <li><a href="#/managementLanguages">{{translation.ManagementLanguages}}</a></li>
+                                </ul>-->
                                 <a href="#/managementLanguages">{{translation.ManagementLanguages}}</a>
                             </li>
                             <li>
