--- a/WebBellwether.Web/app/languages/managementLanguages.html
+++ b/WebBellwether.Web/app/languages/managementLanguages.html
@@ -1,14 +1,16 @@
 ﻿<div class="container">
-    <h1 style="margin-bottom:20px">{{translation.ManagementLanguages}}</h1>
-    <div class="form-inline">
+    <h1 ng-hide="newLanguageOption == true">{{translation.ManagementLanguages}}</h1>
+    <h1 ng-hide="newLanguageOption == false">{{translation.AddLanguage}}</h1>
+    <div class="form-inline" ng-hide="newLanguageOption == true">
         <label>{{translation.Language}}</label>
-        <select id="language" class="form-control myFormColor" ng-init="getLanguageContent(languages[selectedLanguage - 1])" required data-ng-model="selectedLanguageForEdit" data-ng-change="getLanguageContent(selectedLanguageForEdit);" data-ng-options="language.languageName for language in languages">
+        <!--ng-init="getLanguageContent(languages[selectedLanguage - 1])"-->
+        <select id="language" class="form-control myFormColor"  required data-ng-model="selectedLanguageForEdit" data-ng-change="getLanguageContent(selectedLanguageForEdit);" data-ng-options="language.languageName for language in allLanguages">
             <option value=''>{{translation.ChooseLanguage}}</option>
         </select>
     </div>
 
-    <!--BASIC VALUE-->
-    <div class="formAni" style="margin-top:20px;margin-bottom:20px" ng-hide="languageForEdit == null">
+    <!--EDIT LANGUAGE BASIC VALUE-->
+    <div class="formAni" style="margin-top:20px;margin-bottom:20px" ng-hide="languageForEdit == null || newLanguageOption == true">
         <form name="basicLanguageInformation">
             <div class="form-inline" style="text-align:left">
                 <label>{{translation.LanguageName}}</label>
@@ -37,6 +39,7 @@
             <div class="form-inline" style="text-align:left">
                 <button ng-disabled="basicLanguageInformation.$invalid" ng-click="editLanguage(languageForEdit)" class="btn btn-primary btn-danger">{{translation.SaveBasicLanguageInformation}}</button>
             </div>
+            <!--ADD NEW LANGUAGE-->
 
             <!--PUBLISH LANGUAGE-->
             <div class="form-inline" style="text-align:left">
@@ -46,7 +49,7 @@
                     <span data-ng-class="{true:'',false:'mif-ani-spanner'}[languageForEdit.isPublic]" class="check"></span>
                 </label>
                 <label data-ng-class="{true:'',false:'formAni'}[languageForEdit.isPublic]" ng-hide="languageForEdit.isPublic ==true">{{translation.HowToPublishLanguage}}</label>
-            </div>          
+            </div>           
         </form>
         <!--SEARCH-->
         <label style="margin-top:20px">{{translation.Search}}</label>
@@ -56,54 +59,99 @@
         </div>
     </div>
 
-    <div class="row myFormColorWithBorder" ng-repeat-start="slc in selectedLanguageContent | filter:searchImput | startFrom:currentPage*pageSize | limitTo:pageSize" ng-class-odd="'alt'" ng-class="{selectedTransparentWithBorder_hover : hover || activeLanguageKey == slc.key }" ng-mouseenter="hover=true" ng-mouseleave="hover=false">
-        <div class="col-md-9 col-md-push-3">
-            <div class="margin10">
-                <input type="text" class="form-control myFormColorImput" required ng-model="slc.value" />
-            </div>
-        </div>
-        <div class="col-md-3 col-md-pull-9" ng-click="setActiveLanguageKey(slc)">
-            <div class="margin10">
-                <div style="-ms-word-break: break-all; word-break: break-all;">
-                    <a href="" style="text-decoration:none; color:crimson; font-weight:bold">{{slc.key}}</a>
+    <!--NEW LANGUAGE BASIC VALUE-->
+    <div class="formAni" style="margin-top:20px;margin-bottom:20px" ng-hide="newLanguageOption == false">
+        <form name="basicLanguageInformation">
+            <div class="form-inline" style="text-align:left">
+                <label>{{translation.LanguageName}}</label>
+                <div class="input-control text" data-role="input">
+                    <input class="form-control myFormColor" required ng-model="newLanguage.languageName" type="text">
+                    <button style="background-color:transparent;color:white" class="myFormColor button helper-button clear"><span class="mif-cross"></span></button>
                 </div>
             </div>
-        </div>
+
+            <div class="form-inline" style="text-align:left">
+                <label>{{translation.LanguageShortName}}</label>
+                <div class="input-control text" data-role="input">
+                    <input class="form-control myFormColor" required ng-model="newLanguage.languageShortName" type="text">
+                    <button style="background-color:transparent;color:white" class="myFormColor button helper-button clear"><span class="mif-cross"></span></button>
+                </div>
+            </div>
+
+            <div class="form-inline" style="text-align:left">
+                <label>{{translation.LanguageFlag}}</label>
+                <div class="input-control text" data-role="input">
+                    <input class="form-control myFormColor" required ng-model="newLanguage.languageFlag" type="text">
+                    <button style="background-color:transparent;color:white" class="myFormColor button helper-button clear"><span class="mif-cross"></span></button>
+                </div>
+            </div>
+            <!--SAVE LANGUAGE-->
+            <div class="form-inline" style="text-align:left">
+                <button ng-disabled="basicLanguageInformation.$invalid" ng-click="addNewLanguage(newLanguage)" class="btn btn-primary btn-danger">{{translation.SaveBasicLanguageInformation}}</button>
+            </div>
+        </form>
     </div>
-    <!--key detail-->
-    <!--tutaj wystepuje spory problem zwiazany ze zmiana stron (odpala sie zawsze ng-show co jest zle ...) sposob na to : ng-class="{true:'slide-toggle',false:''}[activeLanguageKey == slc.key]"
-    ale również nei działa dobrze bo dradze ng-hide gdy robie select na inym obiekcie kurwa mac ...-->
-    <!--musze tutaj wymyslic jakas blokade np zeby pokazal całość gdy ta bedzie juz gotowa ale nie za pomoca ng-show ...-->
-    <div class="row slide-toggle" ng-repeat-end="" data-ng-hide="activeLanguageKey != slc.key" ng-class-odd="'alt'">
-        <div class="col-md-9 col-md-push-3">
-            <div class="margin10" ng-hide="languageForEdit.language.id == selectedLanguage">
-                <div class="block  margin10">
-                    {{translation.MainLanguageTranslation}}
-                </div>
-                <!--HERE I TAKE TRANSLATION FOR MAIN LANGUAGE-->
-                <div class="block" style="font-weight:bold;">
-                    {{translation[slc.key]}}
-                </div>
-            </div>
-        </div>
-        <div class="col-md-3 col-md-pull-9">
-            <div class="margin10">
-                <!--TRANSLATE LANGUAGE KEY-->
-                <button class="btn btn-primary btn-block">{{translation.Translate}}</button>
-                <!--SAVE LANGUAGE KEY-->
-                <button class="btn btn-default btn-block" ng-disabled="slc.value == null" ng-click="editLanguageKey(slc,languageForEdit.language.id)">{{translation.Save}}</button>
-            </div>
-        </div>
+
+    <!--ADD NEW LANGUAGE DIALOG-->
+    <div ng-hide="newLanguageOption == true" class="form-inline" style="text-align:left">
+        <button ng-click="newLanguageDialog()" class="btn btn-primary btn-success">{{translation.AddLanguage}}</button>
     </div>
-    <!--PAGER CONTROL-->
-    <div class="text-center">
-        <nav>
-            <ul class="pager">
-                <li ng-hide="currentPage==0" ng-click="currentPage=currentPage-1;goToTop()"><a href="">{{translation.Previous}}</a></li>
-                <li ng-hide="numberOfPages() == 0">{{currentPage+1}}/{{numberOfPages()}}</li>
-                <li ng-hide="currentPage >= selectedLanguageContent.length/pageSize - 1;" ng-click="currentPage=currentPage+1;goToTop()"><a href="">{{translation.Next}}</a></li>
-            </ul>
-        </nav>
+    <!--MANAGEMENT LANGUAGES-->
+    <div ng-hide="newLanguageOption == false" class="form-inline" style="text-align:left">
+        <button ng-click="newLanguageDialog()" class="btn btn-primary btn-success">{{translation.ManagementLanguages}}</button>
+    </div>
+
+    <!--LANGUAGES DICTIONARY FOR EDIT--> 
+    <div ng-hide="newLanguageOption == true">
+        <div class="row myFormColorWithBorder" ng-repeat-start="slc in selectedLanguageContent | filter:searchImput | startFrom:currentPage*pageSize | limitTo:pageSize" ng-class-odd="'alt'" ng-class="{selectedTransparentWithBorder_hover : hover || activeLanguageKey == slc.key }" ng-mouseenter="hover=true" ng-mouseleave="hover=false">
+            <div class="col-md-9 col-md-push-3">
+                <div class="margin10">
+                    <input type="text" class="form-control myFormColorImput" required ng-model="slc.value" />
+                </div>
+            </div>
+            <div class="col-md-3 col-md-pull-9" ng-click="setActiveLanguageKey(slc)">
+                <div class="margin10">
+                    <div style="-ms-word-break: break-all; word-break: break-all;">
+                        <a href="" style="text-decoration:none; color:crimson; font-weight:bold">{{slc.key}}</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--key detail-->
+        <!--tutaj wystepuje spory problem zwiazany ze zmiana stron (odpala sie zawsze ng-show co jest zle ...) sposob na to : ng-class="{true:'slide-toggle',false:''}[activeLanguageKey == slc.key]"
+        ale również nei działa dobrze bo dradze ng-hide gdy robie select na inym obiekcie kurwa mac ...-->
+        <!--musze tutaj wymyslic jakas blokade np zeby pokazal całość gdy ta bedzie juz gotowa ale nie za pomoca ng-show ...-->
+        <div class="row slide-toggle" ng-repeat-end="" data-ng-hide="activeLanguageKey != slc.key" ng-class-odd="'alt'">
+            <div class="col-md-9 col-md-push-3">
+                <div class="margin10" ng-hide="languageForEdit.language.id == selectedLanguage">
+                    <div class="block  margin10">
+                        {{translation.MainLanguageTranslation}}
+                    </div>
+                    <!--HERE I TAKE TRANSLATION FOR MAIN LANGUAGE-->
+                    <div class="block" style="font-weight:bold;">
+                        {{translation[slc.key]}}
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 col-md-pull-9">
+                <div class="margin10">
+                    <!--TRANSLATE LANGUAGE KEY-->
+                    <button class="btn btn-primary btn-block">{{translation.Translate}}</button>
+                    <!--SAVE LANGUAGE KEY-->
+                    <button class="btn btn-default btn-block" ng-disabled="slc.value == null" ng-click="editLanguageKey(slc,languageForEdit.language.id)">{{translation.Save}}</button>
+                </div>
+            </div>
+        </div>
+        <!--PAGER CONTROL-->
+        <div class="text-center">
+            <nav>
+                <ul class="pager">
+                    <li ng-hide="currentPage==0" ng-click="currentPage=currentPage-1;goToTop()"><a href="">{{translation.Previous}}</a></li>
+                    <li ng-hide="numberOfPages() == 0">{{currentPage+1}}/{{numberOfPages()}}</li>
+                    <li ng-hide="currentPage >= selectedLanguageContent.length/pageSize - 1;" ng-click="currentPage=currentPage+1;goToTop()"><a href="">{{translation.Next}}</a></li>
+                </ul>
+            </nav>
+        </div>
     </div>
 </div>
 
